search_mpi/search_mpi.txt
  File "search_mpi.py", line 64
    if ( id == 0 ):
                  ^
SyntaxError: invalid syntax
  File "search_mpi.py", line 64
    if ( id == 0 ):
                  ^
SyntaxError: invalid syntax
  File "search_mpi.py", line 64
    if ( id == 0 ):
       File "search_mpi.py", line 64
    if ( id == 0 ):
                      ^
SyntaxError: invalid syntax
         ^
SyntaxError: invalid syntax
-------------------------------------------------------
Primary job  terminated normally, but 1 process returned
a non-zero exit code.. Per user-direction, the job has been aborted.
-------------------------------------------------------
--------------------------------------------------------------------------
mpirun detected that one or more processes exited with non-zero status, thus causing
the job to be terminated. The first process to do so was:

  Process name: [[2955,1],0]
  Exit code:    1
--------------------------------------------------------------------------
